--- a/Trabajo Final/index.html
+++ b/Trabajo Final/index.html
@@ -11,7 +11,7 @@
   <header>
     <h1>Trivia de Recetas</h1>
     <h5 style="margin-right: 10px;">A continuación se presentarán una serie de ingredientes y la bandera de un país.
-      Debés adivinar que plato es originario del país de la bandera y se realiza con los ingredientes indicados.
+      Tenés que adivinar el plato que: es originario del país de la bandera y se realiza con los ingredientes indicados.
     </h5> 
   </header>
   <form id="formulario">
